--- a/estilos/partials/_hero.scss
+++ b/estilos/partials/_hero.scss
@@ -1,7 +1,5 @@
-.main-img {
-    background-image: url(../../img/fondodeg.webp);
-    background-size: cover; /* Ajusta la imagen para que cubra todo el fondo */
-    background-repeat: no-repeat; /* Evita la repetición de la imagen de fondo */
+body {
+    background-color: rgb(52, 192, 122);
   }
 
 .subtitulo{
