--- a/estilos/partials/_media.scss
+++ b/estilos/partials/_media.scss
@@ -78,9 +78,11 @@
         }
         .fajosmilpesos img{
             position: relative;
-            top: 40px; 
-            left: 30px;
+            top: 20px; 
+            left: 20px;
+            bottom: 10px;
             border-radius: 20px;
+            height: 70%;
         }
     }
 
@@ -109,3 +111,31 @@
             
         }
     }
+    @media screen and (max-width: 830px){
+        .nosotrosflex{
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 0.9fr 1.1fr;
+            grid-template-areas: 
+            "quienes"
+            "log";
+            .quienessomos{
+                grid-area: quienes;
+            }
+            .nosotroslogo{
+                grid-area: log;
+            }
+            .nosotroslogo img{
+                border-radius: 50%;
+                margin-top: -20px;
+                margin-bottom: -20px;
+            }
+            .quienessomos{
+                text-align: center;
+                font-size: 80px;
+            }
+        }
+
+    }
+        
+   
