--- a/estilos/estilo.scss
+++ b/estilos/estilo.scss
@@ -6,8 +6,8 @@
 @import "./partials/hero";
 @import "./partials/footer";
 @import "./partials/_nosotros.scss";
-
-@import "./partials/media"
+@import "./partials/preguntas";
+@import "./partials/media";
 
 //mediaquarius van abajo de todo//
 
