--- a/estilos/partials/_media.scss
+++ b/estilos/partials/_media.scss
@@ -11,11 +11,28 @@
     }
     .gris-1{
         grid-area: gris;
-        margin-left: 30px;
+        margin: 2px auto;
+        align-items: center;
+        justify-content: center;
+        .gris{
+            margin: 2px auto;
+            align-items: center;
+            justify-content: center;
+            width: 350px;
+
+        }
     }
     .mano-1{
         grid-area: mano;
-        margin-right: 30px;
+        margin: 2px auto;
+        align-items: center;
+        justify-content: center;
+        .mano{
+            margin: 2px auto;
+            align-items: center;
+            justify-content: center;
+            width: 350px;
+        }
     }
     .carousel.slide{
         grid-area: carousel;
@@ -37,10 +54,14 @@
         "carousel"
         "gris"
         "mano";
+        justify-content: center;
+        align-items: center;
     }
     .gris-1{
         grid-area: gris;
         text-align: center;
+        justify-content: center;
+        align-items: center;
         margin: 0px;
         .gris{
             margin: 0%;
@@ -49,10 +70,14 @@
     }
     .mano-1{
         grid-area: mano;
+        margin: 2px auto;
         text-align: center;
+        justify-content: center;
+        align-items: center;
         .mano{
-            margin: 0%;
+            justify-content: center;
             height: 250px;
+            margin: 2px auto;
         }
     }
     .carousel-caption.d-none.d-md-block {
