--- a/estilos/estilo.scss
+++ b/estilos/estilo.scss
@@ -5,6 +5,9 @@
 @import "./partials/header";
 @import "./partials/hero";
 @import "./partials/footer";
+@import "./partials/inicio";
+@import "./partials/prestamo";
+@import "./partials/contacto";
 @import "./partials/_nosotros.scss";
 @import "./partials/preguntas";
 @import "./partials/media";
