--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -14,14 +14,13 @@
 }
 
 .logo1 {
-  border-radius: 50%;
   width: 200px;
   height: 200px;
+  border-radius: 50%;
 }
 
 .container-fluid {
   background-color: rgba(11, 84, 9, 0.567);
-  border-radius: 3%;
 }
 
 .nav-item:hover {
@@ -39,6 +38,7 @@ header {
 }
 
 body {
+  height: 100vh;
   background-color: rgb(52, 192, 122);
 }
 
@@ -204,7 +204,7 @@ footer {
 
 .quienessomos {
   text-decoration: underline;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 90px;
   transform: 1s;
 }
@@ -213,6 +213,7 @@ footer {
   color: rgb(153, 11, 11);
   transition: 1s;
   transform: scale(1.1);
+  rotate: 10deg;
 }
 
 .nosotrosflex {
@@ -222,7 +223,7 @@ footer {
 }
 .nosotrosflex .nosotroslogo img {
   height: auto;
-  width: 400px;
+  width: 300px;
   margin-left: 100px;
   border-radius: 50%;
 }
@@ -236,8 +237,8 @@ footer {
   background-color: rgb(144, 234, 144);
   margin-right: 25px;
   margin-left: 25px;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 40px;
+  font-family: monospace;
+  font-size: 20px;
   border-radius: 10px;
   text-align: center;
 }
@@ -400,11 +401,16 @@ footer {
   }
   .nosotrosflex .nosotroslogo {
     grid-area: log;
+    margin: 2px auto;
+    align-items: center;
+    justify-content: center;
   }
   .nosotrosflex .nosotroslogo img {
     border-radius: 50%;
     margin-top: -20px;
     margin-bottom: -20px;
+    justify-content: center;
+    margin-left: 0px;
   }
   .nosotrosflex .quienessomos {
     text-align: center;
