--- a/estilos/partials/_media.scss
+++ b/estilos/partials/_media.scss
@@ -103,13 +103,14 @@
         }
         .fajosmilpesos img{
             position: relative;
-            top: 20px; 
-            left: 20px;
-            bottom: 10px;
+            top: 10px; 
+            left: 3px;
             border-radius: 20px;
-            height: 70%;
+            width: 400px;
+            height: 250px;
         }
     }
+
 
 @media screen and (max-width: 970px){
     .datos-2{
@@ -132,7 +133,7 @@
             top: 40px; 
             left: 30px;
             border-radius: 20px;
-            width: 500px;
+            width: 90%;
             
         }
     }
