--- a/estilos/partials/_nosotros.scss
+++ b/estilos/partials/_nosotros.scss
@@ -22,6 +22,8 @@
         width: 300px;
         margin-left: 100px;
         border-radius: 50%;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
 
