--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -38,7 +38,7 @@ header {
 }
 
 body {
-  background-color: rgb(52, 192, 122);
+  background: url(/img/fondopesos.jpg);
 }
 
 .subtitulo {
@@ -87,10 +87,11 @@ h3:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 20px auto;
   margin-top: 50px;
   margin-bottom: 60px;
 }
-.medio .d-block {
+.medio .d-block.w-100 {
   height: 390px;
 }
 .medio .carousel {
@@ -273,7 +274,7 @@ footer {
     align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas: "carousel   carousel" "carousel   carousel" "gris       mano";
   }
   .gris-1 {
