--- a/estilos/partials/_hero.scss
+++ b/estilos/partials/_hero.scss
@@ -1,6 +1,6 @@
 
 body{
-    background-color: rgb(52, 192, 122);
+    background: url(/img/fondopesos.jpg);
 }
 
 .subtitulo{
@@ -47,9 +47,10 @@ h3:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 20px auto;
     margin-top: 50px;
     margin-bottom: 60px;
-    .d-block{
+    .d-block.w-100{
         height: 390px;
     }
     .carousel{
