--- a/estilos/partials/_media.scss
+++ b/estilos/partials/_media.scss
@@ -1,9 +1,10 @@
+
 @media screen and (max-width: 1300px){
     .medio{
         align-items: center;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         grid-template-areas: 
         "carousel   carousel"
         "carousel   carousel"
