--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -17,6 +17,7 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  transition: 1.5s;
 }
 
 .container-fluid {
@@ -33,7 +34,6 @@ header {
 }
 
 .logo1:hover {
-  transition: 1.5s;
   scale: 90%;
 }
 
@@ -62,7 +62,7 @@ h1:hover {
 }
 
 h2:hover {
-  color: green;
+  color: rgb(4, 86, 4);
 }
 
 h3:hover {
@@ -115,18 +115,6 @@ h3:hover {
   margin-left: 40px;
 }
 
-#fajosmilpesos {
-  position: relative;
-  margin-left: 600px;
-}
-
-.fajosmilpesos img {
-  position: absolute;
-  top: 400px;
-  left: 400px;
-  border-radius: 20px;
-}
-
 #mapa {
   position: relative;
   width: 100px;
@@ -135,7 +123,6 @@ h3:hover {
 }
 
 iframe {
-  position: absolute;
   top: 450px;
   left: 450px;
   border-radius: 20px;
@@ -193,6 +180,61 @@ footer {
   scale: 1.2;
 }
 
+.datos {
+  display: flex;
+  justify-content: center;
+}
+
+.archivo {
+  margin-top: 15px;
+}
+
+.fajosmilpesos img {
+  width: 500px;
+  height: auto;
+}
+
+.bodyprestamo {
+  background-color: black;
+}
+
+.prestamopersonal {
+  color: white;
+}
+
+.solicitud {
+  color: white;
+}
+
+.datos3 {
+  color: white;
+}
+
+.ingresostotales2 {
+  color: white;
+}
+
+.archivo {
+  color: white;
+}
+
+.ingresostotales {
+  text-decoration: underline;
+  color: white;
+  margin-top: 15px;
+}
+
+.datos-2 {
+  display: flex;
+  margin-left: 20px;
+  margin-right: 20px;
+  justify-content: center;
+}
+
+.espacio {
+  flex-grow: 1;
+}
+
 .datospersonales {
   transition: 1s;
 }
@@ -201,16 +243,71 @@ footer {
   scale: 1.2;
 }
 
+.botones {
+  margin-left: 50px;
+}
+
+.imgchiquitas {
+  display: grid;
+  margin: 30px auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "reloj   dolar   porcentaje   cuaderno";
+}
+.imgchiquitas .card1 {
+  grid-area: reloj;
+  text-align: center;
+}
+.imgchiquitas .card2 {
+  grid-area: dolar;
+  text-align: center;
+}
+.imgchiquitas .card3 {
+  grid-area: porcentaje;
+  text-align: center;
+}
+.imgchiquitas .card4 {
+  grid-area: cuaderno;
+  text-align: center;
+}
+
+.card1 img {
+  height: 150px;
+  width: auto;
+}
+
+.card2 img {
+  height: 150px;
+  width: auto;
+}
+
+.card3 img {
+  height: 150px;
+  width: auto;
+}
+
+.card4 img {
+  height: 150px;
+  width: auto;
+}
+
+.card-text {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.consultatitulo {
+  text-align: center;
+}
+
 .quienessomos {
   text-decoration: underline;
   font-family: "Times New Roman", Times, serif;
   font-size: 90px;
-  transform: 1s;
+  transition: 1s;
 }
 
 .quienessomos:hover {
   color: rgb(153, 11, 11);
-  transition: 1s;
   transform: scale(1.1);
   rotate: 10deg;
 }
@@ -229,8 +326,11 @@ footer {
   margin-bottom: 10px;
 }
 
+.nosotroslogo {
+  transition: 1s;
+}
+
 .nosotroslogo:hover {
-  transition: 2s;
   transform: scale(1.3);
 }
 
@@ -248,25 +348,77 @@ footer {
   color: rgb(123, 16, 16);
 }
 
+.conteiner1 {
+  display: flex;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.conteiner1 .col1.col2.col3.col4.col5.col6 {
+  height: auto;
+  margin: 10px;
+}
+
 .preguntas {
+  text-align: center;
+  text-decoration: underline;
+  font-size: 50px;
+  margin-top: 20px;
+  margin-bottom: 30px;
   transition: 1s;
 }
 
 .preguntas:hover {
-  scale: 1.2;
+  color: rgb(153, 11, 11);
+  transform: scale(1.2);
 }
 
-.conteiner .row {
-  margin: 2px 5px;
-  justify-content: center;
-}
-
-.col {
+.col1 {
   transition: 1s;
 }
 
-.col:hover {
-  scale: 1.1;
+.col1:hover {
+  transform: scale(1.1);
+}
+
+.col2 {
+  transition: 1s;
+}
+
+.col2:hover {
+  transform: scale(1.1);
+}
+
+.col3 {
+  transition: 1s;
+}
+
+.col3:hover {
+  transform: scale(1.1);
+}
+
+.col4 {
+  transition: 1s;
+}
+
+.col4:hover {
+  transform: scale(1.1);
+}
+
+.col5 {
+  transition: 1s;
+}
+
+.col5:hover {
+  transform: scale(1.1);
+}
+
+.col6 {
+  transition: 1s;
+}
+
+.col6:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 1300px) {
@@ -347,33 +499,29 @@ footer {
     margin-bottom: 10px;
   }
 }
-@media screen and (max-width: 970px) {
+@media screen and (max-width: 1280px) {
   .datos {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: "fajosmilpesos" "datos1";
+    grid-template-rows: 1.3fr 0.9fr;
+    grid-template-areas: "datos1" "fajosmilpesos";
   }
   .form-1 {
     grid-area: datos1;
+    margin-right: 100px;
   }
   .fajosmilpesos {
     grid-area: fajosmilpesos;
   }
-  .fajosmilpesos img {
-    position: relative;
-    top: 10px;
-    left: 3px;
-    border-radius: 20px;
-    width: 400px;
-    height: 250px;
+  .fajosmilpesos {
+    margin: 20px;
   }
 }
-@media screen and (max-width: 970px) {
+@media screen and (max-width: 1048px) {
   .datos-2 {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.9fr 1.1fr;
+    grid-template-rows: 1.2fr 1fr;
     grid-template-areas: "mapa" "form-2";
   }
   .form-2 {
@@ -416,5 +564,84 @@ footer {
   .nosotrosflex .quienessomos {
     text-align: center;
     font-size: 80px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .conteiner1 {
+    display: grid;
+    text-align: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "col1 col2 col3" "col4 col5 col6";
+  }
+  .conteiner1 .col1 {
+    grid-area: col1;
+  }
+  .conteiner1 .col2 {
+    grid-area: col2;
+  }
+  .conteiner1 .col3 {
+    grid-area: col3;
+  }
+  .conteiner1 .col4 {
+    grid-area: col4;
+  }
+  .conteiner1 .col5 {
+    grid-area: col5;
+  }
+  .conteiner1 .col6 {
+    grid-area: col6;
+  }
+}
+@media screen and (max-width: 885px) {
+  .conteiner1 {
+    display: grid;
+    text-align: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: "col1" "col2" "col3" "col4" "col5" "col6";
+  }
+  .conteiner1 .col1 {
+    grid-area: col1;
+  }
+  .conteiner1 .col2 {
+    grid-area: col2;
+  }
+  .conteiner1 .col3 {
+    grid-area: col3;
+  }
+  .conteiner1 .col4 {
+    grid-area: col4;
+  }
+  .conteiner1 .col5 {
+    grid-area: col5;
+  }
+  .conteiner1 .col6 {
+    grid-area: col6;
+  }
+}
+@media screen and (max-width: 805px) {
+  .imgchiquitas {
+    display: grid;
+    margin: 30px auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: "reloj          dolar" "porcentaje     cuaderno";
+  }
+  .imgchiquitas .card1 {
+    grid-area: reloj;
+    text-align: center;
+  }
+  .imgchiquitas .card2 {
+    grid-area: dolar;
+    text-align: center;
+  }
+  .imgchiquitas .card3 {
+    grid-area: porcentaje;
+    text-align: center;
+  }
+  .imgchiquitas .card4 {
+    grid-area: cuaderno;
+    text-align: center;
   }
 }/*# sourceMappingURL=estilo.css.map */
