--- a/estilos/partials/_media.scss
+++ b/estilos/partials/_media.scss
@@ -87,37 +87,33 @@
     }
 }
 
-@media screen and (max-width: 970px){
+@media screen and (max-width: 1280px){
     .datos{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1.3fr 0.9fr;
         grid-template-areas: 
-        "fajosmilpesos"
-        "datos1";
+        "datos1"
+        "fajosmilpesos";
         }
         .form-1{
             grid-area: datos1;
+            margin-right: 100px;
         }
         .fajosmilpesos{
             grid-area: fajosmilpesos;
         }
-        .fajosmilpesos img{
-            position: relative;
-            top: 10px; 
-            left: 3px;
-            border-radius: 20px;
-            width: 400px;
-            height: 250px;
+        .fajosmilpesos{
+            margin: 20px;
         }
     }
 
 
-@media screen and (max-width: 970px){
+@media screen and (max-width: 1048px){
     .datos-2{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 0.9fr 1.1fr;
+        grid-template-rows: 1.2fr 1fr;
         grid-template-areas: 
         "mapa"
         "form-2";
@@ -169,5 +165,94 @@
         }
 
     }
+    @media screen and (max-width: 1200px){
+        .conteiner1{
+            display: grid;
+            text-align: center;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+            grid-template-areas: 
+            "col1 col2 col3"
+            "col4 col5 col6";
+            .col1{
+                grid-area: col1;
+            }
+            .col2{
+                grid-area: col2;
+            }
+            .col3{
+                grid-area: col3;
+            }
+            .col4{
+                grid-area: col4;
+            }
+            .col5{
+                grid-area: col5;
+            }
+            .col6{
+                grid-area: col6;
+            }
+        }
+   }
         
-   
+   @media screen and (max-width: 885px){
+        .conteiner1{
+            display: grid;
+            text-align: center;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-areas: 
+            "col1"
+            "col2"
+            "col3"
+            "col4"
+            "col5"
+            "col6";
+            .col1{
+                grid-area: col1;
+            }
+            .col2{
+                grid-area: col2;
+            }
+            .col3{
+                grid-area: col3;
+            }
+            .col4{
+                grid-area: col4;
+            }
+            .col5{
+                grid-area: col5;
+            }
+            .col6{
+                grid-area: col6;
+            }
+        }
+   }
+@media screen and (max-width: 805px){
+    .imgchiquitas{
+        display: grid;
+        margin: 30px auto;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+        "reloj          dolar"  
+        "porcentaje     cuaderno";
+        .card1{
+            grid-area: reloj;
+            text-align: center;
+        }
+        .card2{
+            grid-area: dolar;
+            text-align: center;
+        }
+        .card3{
+            grid-area: porcentaje;
+            text-align: center;
+        }
+        .card4{
+            grid-area: cuaderno;
+            text-align: center;
+        }
+    }
+    
+}
