--- a/estilos/partials/_preguntas.scss
+++ b/estilos/partials/_preguntas.scss
@@ -1,19 +1,59 @@
+.conteiner1{
+    display: flex;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    .col1.col2.col3.col4.col5.col6{
+        height: auto;
+        margin: 10px;
+    }
+}
+
 .preguntas{
+    text-align: center;
+    text-decoration: underline;
+    font-size: 50px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     transition: 1s;
 }
 .preguntas:hover{
-    scale:(1.2);
+    color: rgb(153, 11, 11);
+    transform: scale(1.2);
 }
-
-.conteiner{
-    .row{
-        margin: 2px 5px;
-        justify-content: center;
+.col1{
+        transition: 1s;
     }
+.col1:hover{
+        transform: scale(1.1);
 }
-.col{
+.col2{
     transition: 1s;
 }
-.col:hover{
-    scale:(1.1);
+.col2:hover{
+    transform: scale(1.1);
+}
+.col3{
+    transition: 1s;
+}
+.col3:hover{
+    transform: scale(1.1);
+}
+.col4{
+    transition: 1s;
+}
+.col4:hover{
+    transform: scale(1.1);
+}
+.col5{
+    transition: 1s;
+}
+.col5:hover{
+    transform: scale(1.1);
+}
+.col6{
+    transition: 1s;
+}
+.col6:hover{
+    transform: scale(1.1);
 }
