--- a/estilos/partials/_prestamo.scss
+++ b/estilos/partials/_prestamo.scss
@@ -1,44 +1,122 @@
 
-.prestamopersonal{
-    transition: 1s;
-}
-
-.prestamopersonal:hover{
-    scale:(1.2);
-}
-
-.datos{
-    display: flex;
-    justify-content: center;
-
-}
-.archivo{
-    margin-top: 15px;
-}
-.fajosmilpesos img{
-    width: 500px;
-    height: auto;
-}
 .bodyprestamo{
     background-color: black;
+    .cuerpoprestamo{
+        margin: 10px auto;
+    }
 }
 .prestamopersonal{
     color: white;
 }
 .solicitud{
+    margin: 20px;
     color: white;
+
 }
-.datos3{
-    color: white;
+.contenedor-carrito{
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 1.8rem;
+
+    .carrito-prestamos{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+
+        .carrito-prestamo{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: rgb(4, 86, 4);
+            color: white;
+            padding: 0.6rem;
+            padding-right: 1.8rem;
+            border-radius: 1rem;
+
+            .carrito-prestamo-imagen{
+                width: 4rem;
+                border-radius: 1rem;
+            }
+            .carrito-prestamo-titulo
+            .carrito-prestamo-cantidad
+            .carrito-prestamo-preciocuota
+            .carrito-prestamo-preciocuota-subtotal{
+                justify-content: center;
+                align-items: center;
+
+            }
+            .carrito-prestamo-eliminar{
+                color: white;
+                background-color: black;
+                border: 0;
+                border-radius: 0.5rem;
+                padding: 7px;
+            }
+        }
+
+    }
+
+    .carrito-acciones{
+        display: flex;
+        justify-content: space-between;
+        color: white;
+
+        .carrito-acciones-izquierda{
+            align-items: center;
+            margin: 0;
+            padding: 0.5rem 0.5rem;
+
+            .carrito-borrar{
+                color: white;
+                font-size: large;
+                border-radius: 1.5rem;
+                background-color: rgb(4, 86, 4);
+                padding: 1.5rem;
+                &:hover{
+                    background-color: rgb(19, 116, 19); 
+                } 
+            }
+        }
+
+        .carrito-acciones-derecha{
+            display: flex;
+            .carrito-acciones-total{
+                display: flex;
+                color: white;
+                font-size: large;
+                border-radius: 1rem 0rem 0rem 1rem;
+                background-color: rgb(4, 86, 4);
+                padding: 1.5rem;
+                margin-left: 20px;
+
+                p{
+                    align-items: center;
+                    margin: 0;
+                    padding: 0.5rem 0.5rem;
+                }
+            }
+            .carrito-acciones-solicitar{
+                color: black;
+                font-size: large;
+                border: 0;
+                border-radius: 0rem 1rem 1rem 0rem;
+                background-color: white;
+                padding: 1.5rem;
+                &:hover{
+                    background-color: rgb(194, 185, 185); 
+                } 
+            }
+        }
+    }
+
 }
-.ingresostotales2{
-    color: white;
-}
-.archivo{
-    color: white;
-}
-.ingresostotales{
-    text-decoration: underline;
-    color: white;
-    margin-top: 15px;
-}
+
+
+
+
+
+
+
+
