--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -85,7 +85,7 @@ h3:hover {
 
 .medio {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   margin: 20px auto;
   margin-top: 50px;
@@ -94,51 +94,42 @@ h3:hover {
 .medio .d-block.w-100 {
   height: 390px;
 }
-.medio .carousel {
-  height: 400px;
+.medio .gris-1 {
+  justify-content: center;
+  align-items: center;
 }
-.medio .gris {
-  height: 250px;
-  margin-right: 160px;
-}
-.medio .mano {
-  height: 250px;
-  margin-left: 160px;
-}
-
-.form-1 {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  padding-top: 10px;
-  margin-bottom: 15px;
-  margin-left: 40px;
-}
-
-#mapa {
+.medio .gris-1 .agregar-carrito {
+  border: 0;
+  background-color: rgb(4, 86, 4);
+  color: white;
+  justify-content: center;
+  padding: 3px;
+  padding-bottom: 10px;
   position: relative;
-  width: 100px;
-  height: 600px;
-  margin-top: 100px;
-}
-
-iframe {
-  top: 450px;
-  left: 450px;
-  border-radius: 20px;
-}
-
-.form-select {
-  margin-bottom: 20px;
-}
-
-.form-2 {
+  top: 0px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: start;
-  padding-top: 10px;
-  margin-bottom: 15px;
-  margin-left: 40px;
+  flex-direction: row;
+  border-radius: 1rem;
+}
+.medio .gris-1 .agregar-carrito:hover {
+  background-color: rgb(19, 116, 19);
+}
+.medio .gris-1 .cuotas {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.medio .gris-1 .cuotas p {
+  margin-left: 10px;
+  margin-top: 8px;
+  margin-bottom: 5px;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+.medio .gris-1 .gris {
+  height: 250px;
 }
 
 footer {
@@ -172,30 +163,11 @@ footer {
   scale: 1.2;
 }
 
-.prestamopersonal {
-  transition: 1s;
-}
-
-.prestamopersonal:hover {
-  scale: 1.2;
-}
-
-.datos {
-  display: flex;
-  justify-content: center;
-}
-
-.archivo {
-  margin-top: 15px;
-}
-
-.fajosmilpesos img {
-  width: 500px;
-  height: auto;
-}
-
 .bodyprestamo {
   background-color: black;
+}
+.bodyprestamo .cuerpoprestamo {
+  margin: 10px auto;
 }
 
 .prestamopersonal {
@@ -203,231 +175,104 @@ footer {
 }
 
 .solicitud {
+  margin: 20px;
   color: white;
 }
 
-.datos3 {
-  color: white;
-}
-
-.ingresostotales2 {
-  color: white;
-}
-
-.archivo {
-  color: white;
-}
-
-.ingresostotales {
-  text-decoration: underline;
-  color: white;
-  margin-top: 15px;
-}
-
-.datos-2 {
+.contenedor-carrito {
+  margin: 50px;
   display: flex;
-  margin-left: 20px;
-  margin-right: 20px;
-  justify-content: center;
+  flex-direction: column;
+  gap: 1.8rem;
 }
-
-.espacio {
-  flex-grow: 1;
-}
-
-.datospersonales {
-  transition: 1s;
-}
-
-.datospersonales:hover {
-  scale: 1.2;
-}
-
-.botones {
-  margin-left: 50px;
-}
-
-.imgchiquitas {
-  display: grid;
-  margin: 30px auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "reloj   dolar   porcentaje   cuaderno";
-}
-.imgchiquitas .card1 {
-  grid-area: reloj;
-  text-align: center;
-}
-.imgchiquitas .card2 {
-  grid-area: dolar;
-  text-align: center;
-}
-.imgchiquitas .card3 {
-  grid-area: porcentaje;
-  text-align: center;
-}
-.imgchiquitas .card4 {
-  grid-area: cuaderno;
-  text-align: center;
-}
-
-.card1 img {
-  height: 150px;
-  width: auto;
-}
-
-.card2 img {
-  height: 150px;
-  width: auto;
-}
-
-.card3 img {
-  height: 150px;
-  width: auto;
-}
-
-.card4 img {
-  height: 150px;
-  width: auto;
-}
-
-.card-text {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
-
-.consultatitulo {
-  text-align: center;
-}
-
-.quienessomos {
-  text-decoration: underline;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 90px;
-  transition: 1s;
-}
-
-.quienessomos:hover {
-  color: rgb(153, 11, 11);
-  transform: scale(1.1);
-  rotate: 10deg;
-}
-
-.nosotrosflex {
+.contenedor-carrito .carrito-prestamos {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.contenedor-carrito .carrito-prestamos .carrito-prestamo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(4, 86, 4);
+  color: white;
+  padding: 0.6rem;
+  padding-right: 1.8rem;
+  border-radius: 1rem;
+}
+.contenedor-carrito .carrito-prestamos .carrito-prestamo .carrito-prestamo-imagen {
+  width: 4rem;
+  border-radius: 1rem;
+}
+.contenedor-carrito .carrito-prestamos .carrito-prestamo .carrito-prestamo-titulo .carrito-prestamo-cantidad .carrito-prestamo-preciocuota .carrito-prestamo-preciocuota-subtotal {
   justify-content: center;
   align-items: center;
 }
-.nosotrosflex .nosotroslogo img {
-  height: auto;
-  width: 300px;
-  margin-left: 100px;
-  border-radius: 50%;
-  margin-top: 10px;
-  margin-bottom: 10px;
+.contenedor-carrito .carrito-prestamos .carrito-prestamo .carrito-prestamo-eliminar {
+  color: white;
+  background-color: black;
+  border: 0;
+  border-radius: 0.5rem;
+  padding: 7px;
 }
-
-.nosotroslogo {
-  transition: 1s;
-}
-
-.nosotroslogo:hover {
-  transform: scale(1.3);
-}
-
-.nosotrostexto {
-  background-color: rgb(144, 234, 144);
-  margin-right: 25px;
-  margin-left: 25px;
-  font-family: monospace;
-  font-size: 20px;
-  border-radius: 10px;
-  text-align: center;
-}
-.nosotrostexto .resaltar {
-  text-decoration: underline;
-  color: rgb(123, 16, 16);
-}
-
-.conteiner1 {
+.contenedor-carrito .carrito-acciones {
   display: flex;
-  text-align: center;
+  justify-content: space-between;
+  color: white;
+}
+.contenedor-carrito .carrito-acciones .carrito-acciones-izquierda {
+  align-items: center;
+  margin: 0;
+  padding: 0.5rem 0.5rem;
+}
+.contenedor-carrito .carrito-acciones .carrito-acciones-izquierda .carrito-borrar {
+  color: white;
+  font-size: large;
+  border-radius: 1.5rem;
+  background-color: rgb(4, 86, 4);
+  padding: 1.5rem;
+}
+.contenedor-carrito .carrito-acciones .carrito-acciones-izquierda .carrito-borrar:hover {
+  background-color: rgb(19, 116, 19);
+}
+.contenedor-carrito .carrito-acciones .carrito-acciones-derecha {
+  display: flex;
+}
+.contenedor-carrito .carrito-acciones .carrito-acciones-derecha .carrito-acciones-total {
+  display: flex;
+  color: white;
+  font-size: large;
+  border-radius: 1rem 0rem 0rem 1rem;
+  background-color: rgb(4, 86, 4);
+  padding: 1.5rem;
   margin-left: 20px;
-  margin-right: 20px;
 }
-.conteiner1 .col1.col2.col3.col4.col5.col6 {
-  height: auto;
-  margin: 10px;
+.contenedor-carrito .carrito-acciones .carrito-acciones-derecha .carrito-acciones-total p {
+  align-items: center;
+  margin: 0;
+  padding: 0.5rem 0.5rem;
 }
-
-.preguntas {
-  text-align: center;
-  text-decoration: underline;
-  font-size: 50px;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  transition: 1s;
+.contenedor-carrito .carrito-acciones .carrito-acciones-derecha .carrito-acciones-solicitar {
+  color: black;
+  font-size: large;
+  border: 0;
+  border-radius: 0rem 1rem 1rem 0rem;
+  background-color: white;
+  padding: 1.5rem;
 }
-
-.preguntas:hover {
-  color: rgb(153, 11, 11);
-  transform: scale(1.2);
-}
-
-.col1 {
-  transition: 1s;
-}
-
-.col1:hover {
-  transform: scale(1.1);
-}
-
-.col2 {
-  transition: 1s;
-}
-
-.col2:hover {
-  transform: scale(1.1);
-}
-
-.col3 {
-  transition: 1s;
-}
-
-.col3:hover {
-  transform: scale(1.1);
-}
-
-.col4 {
-  transition: 1s;
-}
-
-.col4:hover {
-  transform: scale(1.1);
-}
-
-.col5 {
-  transition: 1s;
-}
-
-.col5:hover {
-  transform: scale(1.1);
-}
-
-.col6 {
-  transition: 1s;
-}
-
-.col6:hover {
-  transform: scale(1.1);
+.contenedor-carrito .carrito-acciones .carrito-acciones-derecha .carrito-acciones-solicitar:hover {
+  background-color: rgb(194, 185, 185);
 }
 
 @media screen and (max-width: 1300px) {
   .medio {
     align-items: center;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas: "carousel   carousel" "carousel   carousel" "gris       mano";
+    justify-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "200   300   400";
+    max-width: 100%;
   }
   .gris-1 {
     grid-area: gris;
