--- a/estilos/partials/_hero.scss
+++ b/estilos/partials/_hero.scss
@@ -45,7 +45,7 @@ h3:hover{
 
 .medio{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin: 20px auto;
     margin-top: 50px;
@@ -53,48 +53,47 @@ h3:hover{
     .d-block.w-100{
         height: 390px;
     }
-    .carousel{
-        height: 400px;
-    }
-    
-    .gris{
-        height: 250px;
-        margin-right: 160px;
-    }
-    .mano{
-        height: 250px;
-        margin-left: 160px;
-    }
+    .gris-1{
+        justify-content: center;
+        align-items: center;
 
+        .agregar-carrito{
+            border: 0;
+            background-color: rgb(4, 86, 4);
+            color: white;
+            justify-content: center;
+            padding: 3px;
+            padding-bottom: 10px;
+            position: relative;
+            top: 0px;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            border-radius: 1rem;
+            &:hover{
+                background-color: rgb(19, 116, 19);
+            }
+        }
+        .cuotas{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+                p {
+                    margin-left: 10px;
+                    margin-top: 8px;
+                    margin-bottom: 5px;
+                    align-items: center;
+                    justify-content: center;
+                    font-weight: bold;
+            }
+        }
+        .gris{
+            height: 250px;
+        }
+    }
 }
-.form-1{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    padding-top: 10px;
-    margin-bottom: 15px;
-    margin-left: 40px;
-    }
-    #mapa {
-        position: relative;
-        width: 100px; 
-        height: 600px; 
-        margin-top: 100px;
-    }
-        
-    iframe {
-        top: 450px; 
-        left: 450px;
-        border-radius: 20px;
-    }
-.form-select{
-    margin-bottom: 20px;
-}
-.form-2{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    padding-top: 10px;
-    margin-bottom: 15px;
-    margin-left: 40px;
-    }
+
+
+
+
+
